<resources>
    <string name="app_name">Eduplex Mobile</string>
    <string name="loren_ipsum"></string>
    <string name="sample_lorem_ipsum"></string>
    <string name="sample_name"></string>
    <string name="sample_id"></string>
    <string name="sample_harga_total"></string>
    <string name="sample_daymonth"></string>
    <string name="sample_year"></string>
    <string name="sample_pengajuan_kredit_item"></string>
    <string name="sample_item_name"></string>
    <string name="sample_amount"></string>
    <string name="sample_url"></string>
    <string name="sample_msg_title"></string>
    <string name="sample_date"></string>
    <string name="sample_jumlah_kebutuhan"></string>
    <string name="sample_cicilan"></string>
    <string name="sample_no_agreement"></string>
    <string name="sample_produk_kpr"></string>
    <string name="share_text_1">Download aplikasi mobile Eduplex ("</string>
    <string name="share_text_2">) sekarang juga, masukkan kode referal: "</string>
    <string name="share_text_3">, untuk mendapat bonus K-Voucher.</string>
    <string name="about_kpm">Welcome to Eduplex Café, a Café and Study - Co-working Space in Bandung! Newly established in 2016, Eduplex is an education themed café and co-working</string>
    <string name="err_verifikasi_timeout">Maaf, request verifikasi kode belum bisa dilakukan (request timeout), silahkan coba lagi.</string>
    <string name="angsuran_pertama">Angsuran Pertama :</string>
    <string name="angsuran_selanjutnya">Angsuran Selanjutnya :</string>
    <string name="angsuran">Angsuran</string>
    <string name="err_harap_diisi">Harap diisi</string>
    <string name="err_tenor_min_60">Tenor minimal KPR adalah 60</string>
    <string name="err_tenor_max_240">Tenor maksimal KPR adalah 240</string>
    <string name="err_percentage_max">Format persentase invalid, contoh yang benar 25.26</string>
    <string name="err_no_ktp_min">Nomor KTP minimal 16 digit angka</string>
    <string name="err_no_hp_min">Nomor HP minimal 10 digit angka</string>
    <string name="err_no_telp_min">Nomor Telp minimal 7 digit angka</string>
    <string name="err_kode_pos_min">Kode Pos minimal 5 digit angka</string>
    <string name="err_format_no_hp">Format nomor HP harus 08xxx</string>
    <string name="server_undermaintenance">Maaf sementara permintaan anda tidak dapat diproses saat ini, silahkan coba beberapa saat lagi.</string>
    <string name="err_tidak_ada_data">Belum ada data.</string>
    <string name="err_500">Maaf sementara permintaan anda tidak dapat diproses saat ini, silahkan coba beberapa saat lagi.</string>
    <string name="err_data_tidak_sesuai_lengkap">Data dari server tidak sesuai/belum lengkap.</string>
    <string name="err_data_kelurahan_tidak_ditemukan">Data kelurahan tidak ditemukan.</string>
    <string name="err_data_region_index_0">Silahkan lengkapi data region terlebih dahulu.</string>
    <string name="err_jumlah_kode_verifikasi_salah">Jumlah kode SMS verifikasi tidak sesuai</string>
    <string name="err_registration_failed">Error data registrasi. Registrasi gagal.</string>
    <string name="alert">Alert</string>
    <string name="alert_anda_yakin_hapus">Anda yakin untuk menghapus ini?</string>
    <string name="harap_login_user">Harap login sebagai user</string>
    <string name="alert_jumlah_foto_berlebih">Jumlah foto yang ada masukkan telah melebihi batas maksimal</string>
    <string name="alert_edit_profile_success">Profil Anda berhasil disimpan</string>
    <string name="alert_edit_profile_fail">Profil Anda gagal disimpan</string>
    <string name="alert_permission_reject">If you reject permission, you can not use this service. Please turn on permissions at [Setting] > [Permission].</string>
    <string name="press_back_again">Press back button again to exit</string>
    <string name="alert_fill_all_field">Semua field wajib diisi</string>
    <string name="alert_validate_new_pin">Konfirmasi PIN Baru tidak sesuai</string>
    <string name="alert_ubah_pin_gagal">Ubah PIN Gagal</string>
    <string name="alert_pin_must_6">PIN harus terdiri dari 6 angka</string>
    <string name="alert_congratulation_uc">SELAMAT</string>
    <string name="alert_connection_fail">Koneksi gagal, pastikan device Anda terhubung ke internet</string>
    <string name="ok_uc">OK</string>
    <string name="maaf_terjadi_kesalahan_uc">Maaf, terjadi kesalahan pada aplikasi. Silahkan tekan tombol kembali dibawah.</string>
    <string name="back_uc">KEMBALI</string>
    <string name="cancel_uc">CANCEL</string>
    <string name="loading">Loading..</string>
    <string name="relogin">Please wait, re-login the app..</string>
    <string name="alert_validate_new_password">Konfirmasi Password Baru tidak sesuai</string>
    <string name="alert_ubah_password_gagal">Ubah Password Gagal</string>
    <string name="alert_password_must_6">Password harus terdiri dari 6 karakter</string>
    <string name="alert_email_harap_diisi">E-mail harap diisi</string>
    <string name="alert_name_harap_diisi">Nama lengkap harap diisi</string>
    <string name="alert_format_email_salah">Format e-mail tidak sesuai</string>
    <string name="alert_tahun_minimal">Panjang field tahun harus 4 karakter</string>
    <string name="alert_password_harap_diisi">Password harap diisi</string>
    <string name="alert_panjang_password_minimal">Panjang password minimal</string>
    <string name="alert_karakter">karakter</string>
    <string name="alert_login_gagal">Login gagal, cek kesesuaian e-mail dan password Anda</string>
    <string name="alert_request_gagal">Request gagal</string>
    <string name="nav_group_eduplex">EDUPLEX</string>
    <string name="nav_menu_web">Web</string>
    <string name="nav_menu_kreditku">Kreditku</string>
    <string name="nav_menu_data_kreditku">Data Pekerjaan</string>
    <string name="nav_menu_cabang_terdekat">Lokasi</string>
    <string name="nav_group_dukungan">APLIKASI</string>
    <string name="nav_menu_suara_konsumen">Suara Konsumen</string>
    <string name="nav_menu_kotak_surat">Kotak Surat</string>
    <string name="nav_menu_faq">FAQ</string>
    <string name="nav_group_aplikasi">APLIKASI</string>
    <string name="nav_menu_pengaturan_aplikasi">Pengaturan Aplikasi</string>
    <string name="nav_menu_about">Tentang Eduplex</string>
    <string name="nav_menu_share">Share Eduplex Mobile</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_uc">SIGN IN</string>
    <string name="login_as_guest">Login as a guest</string>
    <string name="login_as_guest_uc">LOGIN AS A GUEST</string>
    <string name="guest">Guest</string>
    <string name="awal_masuk_aplikasi">Awal masuk Eduplex mobile</string>
    <string name="awal_masuk_aplikasi_ket">Ini pertama kali Anda masuk ke aplikasi Eduplex mobile.</string>
    <string name="title_activity_register_data">Registrasi Data</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="alamat_tinggal_sekarang">Alamat Tinggal Sekarang</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="provinsi">Provinsi</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kota">Kota</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="no_handphone">No Handphone</string>
    <string name="telp_rumah">Telp Rumah</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="pilih_kelurahan">Pilih Kelurahan</string>
    <string name="gagal_mengambil_data_server">Gagal mengambil data dari server. Pastikan Anda terkoneksi dengan internet.</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="title_activity_register_keamanan">Registrasi Keamanan</string>
    <string name="pin_anda">PIN Anda</string>
    <string name="lupa_pin">Lupa PIN</string>
    <string name="konfirmasi_pin_anda">Konfirmasi PIN Anda</string>
    <string name="petunjuk_sandi_rahasia">Petunjuk Sandi Rahasia</string>
    <string name="jawaban">Jawaban</string>
    <string name="pertanyaan_keamanan">Pertanyaan Keamanan</string>
    <string name="daftar_uc">DAFTAR</string>
    <string name="lanjut_uc">LANJUT</string>
    <string name="pilih_pertanyaan_rahaasia">Pilih Pertanyaan Rahasia</string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="produk_kami_uc">LAYANAN KAMI</string>
    <string name="barang_terlaris_uc">MENU REKOMENDASI</string>
    <string name="home_frag_menu">Menu</string>
    <string name="home_frag_meja">Meja</string>
    <string name="home_frag_topUp">Top Up</string>
    <string name="home_frag_cashier">Cashier Call</string>
    <string name="search">Search Product</string>
    <string name="pengajuan_kredit">Pengajuan Kredit</string>
    <string name="ubah_pin_kptunai">Ubah PIN K-Voucher</string>
    <string name="lupa_pin_kptunai">Lupa PIN K-Voucher</string>
    <string name="gunakan_kptunai">Gunakan Eduplex Voucher</string>
    <string name="bayar_angsuranku">Bayar Angsuranku</string>
    <string name="tarik_kptunai_via_cabang">Tarik K-Voucher via Cabang</string>
    <string name="reset_kptunai">Reset K-Voucher</string>
    <string name="isi_kptunai">Isi Eduplex Voucher</string>
    <string name="harap_login_kptunai">Harap login untuk menggunakan fitur ini.</string>
    <string name="tebus_kode_referal">Kode Referal Teman</string>
    <string name="tebus_kode_voucher">Kode Voucher</string>
    <string name="kode_referal_header">Kode Referal :\u0020</string>
    <string name="sisa_angsuranku">Sisa Angsuranku</string>
    <string name="alert_sisa_saldo">Maaf, saldo K-Voucher Anda tidak mencukupi, salda Anda tersisa\u0020</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="email">E-mail</string>
    <string name="save_changes_up">SAVE CHANGES</string>
    <string name="verifikasi_akunn">Verifikasi Akun</string>
    <string name="title_activity_katalog_item_detail">Menu Detail</string>
    <string name="description_up">Deskripsi</string>
    <string name="syarat_ketentuan_up">Syarat dan Ketentuan</string>
    <string name="installments_up">Perkiraan Angsuran</string>
    <string name="install_6">6X</string>
    <string name="ajukan_kredit_up">AJUKAN KREDIT</string>
    <string name="simulate_kpr_up">SIMULASI KPR</string>
    <string name="per_bulan">/bulan</string>
    <string name="syarat_uc">SYARAT</string>
    <string name="harga_dapat_berubah">Harga dapat berubah sewaktu-waktu</string>
    <string name="title_activity_ubah_pin">Ubah PIN</string>
    <string name="simulasi_kredit_uc">SIMULASI KREDIT</string>
    <string name="total_pinjaman">Total Pinjaman</string>
    <string name="bunga_pinjaman">Bunga % (per bulan)</string>
    <string name="admin_fee">Admin Fee</string>
    <string name="uang_muka_dp">Uang Muka/DP %</string>
    <string name="tenor">Tenor(x)</string>
    <string name="angsuran_cicilan">Angsuran/Cicilan</string>
    <string name="cara_pemakaian">Cara Top Up Kasir :\u0020</string>
    <string name="cara_pemakaian_1">SECRET</string>
    <string name="cara_pemakaian_2">1. Sebutkan kode Unik anda ke kasir</string>
    <string name="cara_pemakaian_3">2. Bayar sesuai nominal top up anda</string>
    <string name="cara_pemakaian_4">3. Kasir akan memprosese pembelian top up anda</string>
    <string name="cara_pemakaian_5">Edu Kredit dapat dipakai untuk pembayaran transaksi.</string>
</resources>