<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:id="@+id/tvDialogAjukanKreditHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/alert_congratulation_uc"
        android:layout_marginTop="@dimen/margin"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_xbig"/>

    <TextView
        android:padding="@dimen/padding"
        android:id="@+id/tvDialogAjukanKreditContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_lorem_ipsum"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:textColor="@color/text_default"
        android:textSize="@dimen/text_normal"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_large"
        android:background="@drawable/bg_border_rectangle_yellow_fill_click"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/tvDialogAjukanKreditOK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/text_blue"
            android:text="@string/ok_uc"
            android:textSize="@dimen/text_big"/>
    </RelativeLayout>

</LinearLayout>