<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/value_200dp"
    card_view:cardUseCompatPadding="true"
    android:foreground="?android:selectableItemBackground"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/padding">
            <ImageView
                android:id="@+id/ivItem"
                android:layout_width="@dimen/value_125dp"
                android:layout_height="@dimen/value_125dp"
                android:contentDescription="@string/action_settings"
                android:layout_marginBottom="@dimen/margin"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_small"
                android:text="@string/sample_item_name"
                android:gravity="center"
                android:singleLine="true"/>
            <TextView
                android:id="@+id/tvItemHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_small"
                android:text="@string/sample_jumlah_kebutuhan"
                android:gravity="center"
                android:singleLine="true"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>