<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/page_background">

    <include
        android:id="@+id/include5"
        layout="@layout/item_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout"
        android:layout_below="@+id/include5"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSimulasiKreditTotalPinjaman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:theme="@style/MyTextInputLayoutStyle">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_pinjaman"
                    android:textSize="@dimen/text"
                    android:maxLength="@integer/nominal_with_format_max_length"
                    android:inputType="number"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSimulasiKreditTenor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_weight="1"
                android:theme="@style/MyTextInputLayoutStyle">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/tenor"
                    android:inputType="number"
                    android:textSize="@dimen/text"
                    android:maxLength="@integer/tenor_max_length"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilSimulasiKreditUangMuka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_weight="1"
                    android:theme="@style/MyTextInputLayoutStyle">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text"
                        android:hint="@string/uang_muka_dp"
                        android:inputType="numberDecimal"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilSimulasiKreditBungaPinjaman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_weight="1"
                    android:theme="@style/MyTextInputLayoutStyle">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text"
                        android:hint="@string/bunga_pinjaman"
                        android:inputType="numberDecimal"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSimulasiKreditAdminFee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:theme="@style/MyTextInputLayoutStyle">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/admin_fee"
                    android:textSize="@dimen/text"
                    android:maxLength="@integer/fee_with_format_max_length"
                    android:inputType="number"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/llResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/bg_border_rectangle_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_xbig">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/angsuran_cicilan"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/tvSimulasiKreditInstallment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_big" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/text_default"
                    android:textStyle="bold"
                    android:text="@string/angsuran_pertama"
                    android:textSize="@dimen/text" />


                <TextView
                    android:id="@+id/tvSimulasiKreditAngsuranPertama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:textColor="@color/text_default"
                    android:textStyle="bold"
                    android:textSize="@dimen/text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:textColor="@color/text_default"
                    android:textStyle="bold"
                    android:text="@string/angsuran_selanjutnya"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/tvSimulasiKreditAngsuranSelanjutnya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:textColor="@color/text_default"
                    android:textStyle="bold"
                    android:textSize="@dimen/text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_large"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_border_rectangle_yellow_fill_click">

        <TextView
            android:id="@+id/tvSimulasi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/simulasi_kredit_uc"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_normal" />
    </RelativeLayout>

</RelativeLayout>













